Fixing footer and last section alignment issues

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -394,11 +394,6 @@ div.image-2 {
   border: #fff;
 }
 
-.row {
-  margin-left: -15px;
-  margin-right: -15px;
-}
-
 .subscribe-btn-2 {
   background-color: #f72310;
   color: white;
